# KlippConfig

./: .gitignore  CHANGELOG.md  KlippConfig.spec  README.md  install_dependencies.ps1  pyproject.toml
app/: __init__.py  main.py  version.py
app/bundles/: README.md
app/domain/: __init__.py  models.py
app/presets/: __init__.py  index.json  voron_0_1.json  voron_0_2.json  voron_1_8.json  voron_2_4_250.json  voron_2_4_300.json  voron_2_4_350.json  voron_switchwire.json  voron_trident_250.json  voron_trident_300.json
app/services/: __init__.py  action_log.py  addon_bundle_learning.py  board_registry.py  (+20 more)
docs/: files_ui_experiment_material_v1.md  manual-smoke-checklist.md  technical-reference.md
klippconfig.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build_windows.ps1  create_desktop_shortcut.ps1  klippconfig-installer.iss  release_manager.py  run_klippconfig.ps1
tests/: test_action_log.py  test_addon_bundle_learning.py  test_app_state_store.py  test_config_bundles.py  test_config_graph.py  test_discord_webhook.py  test_existing_machine_import.py  test_export_service.py  test_files_form_editor.py  test_firmware_tools.py  test_klipper_ast.py  test_manage_printer_ui.py  test_parity_service.py  test_preset_catalog.py  test_printer_discovery.py  test_printer_discovery_ui.py  test_project_store.py  test_release_versioning.py  test_render_validation.py  test_saved_connections_service.py  test_saved_machine_profiles.py  test_ssh_deploy_service.py  test_ui_scaling_service.py  test_ui_scaling_ui.py  test_ui_wiring.py  test_update_checker.py
(+64 files in other folders)
