[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klippconfig"
version = "0.1.3"
description = "Desktop Klipper firmware configurator with curated Voron presets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8.0",
  "pydantic>=2.10.0",
  "jsonschema>=4.23.0",
  "Jinja2>=3.1.4",
  "paramiko>=3.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-qt>=4.4.0",
]

[project.gui-scripts]
klippconfig = "app.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
qt_api = "pyside6"


